@@ -21,3 +21,4 @@ xml:
     message.xml
     queue.xml
     email.xml
+    error.xml
