@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="rec_name" string="Origin" expand="1"/>
+    <field name="summary" expand="2"/>
+    <field name="state"/>
+    <button name="open"/>
+    <button name="process"/>
+    <button name="solve"/>
+</tree>
